--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
+    "cookies-next": "^5.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "multer": "^1.4.5-lts.1",
@@ -17,7 +21,20 @@
     "next-connect": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "aws-sdk": "^2.1531.0",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7",
+    "fs": "^0.0.1-security",
+    "lucide-react": "^0.474.0",
+    "path": "^0.12.7",
+    "postcss": "8.4.24",
+    "quill": "^1.3.7",
+    "react-device-detect": "^2.2.3",
+    "react-router": "^6.14.0",
+    "react-router-dom": "^6.14.0",
+    "tailwindcss": "3.3.2",
+    "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
     "postcss": "^8",
